Switched from jade to ejs and started to understand how routing works

--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -1,4 +1,5 @@
-
+<%- include("templates/head")%>
+<%- include("templates/menuBar")%>
 <link type="text/css" rel="stylesheet" href="/styles/mainPage.min.css" />
 <script defer src="/scripts/mainPage.js"></script>
 
@@ -35,3 +36,4 @@
     <a class="small">Read More</a>
     <span class="small"></span>
 </div>
+<%- include("templates/foot")%>
