Added ability to view all articles (not comments though)

--- a/views/story.ejs
+++ b/views/story.ejs
@@ -1,3 +1,6 @@
+<%- include("templates/head")%>
+<%- include("templates/menuBar")%>
+
 <link type="text/css" rel="stylesheet" href="/styles/stormStory.min.css?1.1" />
 <script defer src="/scripts/execCommands.min.js"></script>
 <script defer src="/scripts/story.js"></script>
@@ -21,3 +24,4 @@
         <button class="reply">Reply</button>
     </article>
 </div>
+<%- include("templates/foot")%>
