Added User class, ability to log in and out

--- a/views/templates/menuBar.ejs
+++ b/views/templates/menuBar.ejs
@@ -63,7 +63,12 @@
 
             }
 
-        ?>-->
+        ?>--><li id="logout">
+                                       <form id="menuOut" method="post" action="/api/userStatus">
+                                           <input id="logoutInpt" type="submit" name="logout" value="Log Out" />
+                                       </form>
+                                   </li>
+
     </ul>
 
 </nav>
