--- a/views/template.ejs
+++ b/views/template.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title><%- title %></title>
+	<title><%= title %></title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="<?= htmlspecialchars($description); ?>" />
@@ -11,22 +11,10 @@
     <link rel="canonical" href="https://tabceots.com" />
 
 
-
-
-  <!-- when offline-->
-<!--  <script defer type="text/javascript" src="/scripts/jquery-3.1.1.min.js"></script>-->
-
-       <!--
-              <script defer
-			  src="https://code.jquery.com/jquery-3.1.1.min.js"
-			  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-			  crossorigin="anonymous"></script>
--->
 	 <link type="text/css" rel="stylesheet" href="/styles/stormStyles.min.css?1.1" />
 
 
 	  <script defer type="text/javascript" src="/scripts/stormScripts.js?1.1"></script>
-
 
 </head>
 <body>
@@ -56,51 +44,43 @@
               <option value="other">Other</option>
             </select>
         </li>
-<!--
-        <?php echo !isset($token->level) ? '<li><a href="/login">Log In</a></li>' : "" ?>
+
+        <% if (!jwt.level) { %>
+            <li><a href="/login">Log In</a></li>
+        <% } %>
 
         <li><a href="/signup">
-            <?php echo isset($token->level) ? "Create Accounts" : "Sign Up"; ?>
+            <% if (jwt.level) { %>
+                Create Accounts
+            <%} else {%>
+                Sign Up
+            <% } %>
             </a></li>
         <li><a href="/u">Journalists</a></li>
         <li><a href="/mission">Mission</a></li>
         <li><a href="/issue/">Issues</a></li>
 
-        <?php
 
+         <% if (jwt.level) { %>
 
-            if (isset($token->level)) {
-
-                $items = "";
-
-                switch($token->level) {
-                    case 3:
-                        $items .= '<li><a href="/modifyArticles">Articles</a></li>';
-                    case 2:
-                    case 1:
-                        $items .= '
-                        <li><a href="/publish">Publish</a></li>';
-                }
+               <% switch(jwt.level) {
+                    case 3: %>
+                        <li><a href="/modifyArticles">Articles</a></li>
+                <%  case 2:
+                    case 1: %>
+                        <li><a href="/publish">Publish</a></li>
+               <% }
 
                 // separate so if have 2fa but no code yet and want to log out of that portion
-                if (isset($token->id)) {
-                        $items .= '<li id="logout">
-                                       <form id="menuOut" method="post" action="/api/userStatus">
-                                           <input id="logoutInpt" type="submit" name="logout" value="Log Out" />
-                                       </form>
-                                   </li>
-                        <li class="profile"><a href="/u/'.$token->email.'">'.$token->email.'</a></li>';
-                }
-            echo $items;
-
-            }
-
-        ?>--><li id="logout">
-                                       <form id="menuOut" method="post" action="/api/userStatus">
-                                           <input id="logoutInpt" type="submit" name="logout" value="Log Out" />
-                                       </form>
-                                   </li>
-
+                if (jwt.id) { %>
+                        <li id="logout">
+                            <form id="menuOut" method="post" action="/api/userStatus">
+                                <input id="logoutInpt" type="submit" name="logout" value="Log Out" />
+                            </form>
+                        </li>
+                        <li class="profile"><a href="/u/<%jwt.email%>"><%jwt.email%></a></li>
+               <% } %>
+         <% } %>
     </ul>
 
 </nav>
