Added meta description tag

--- a/views/template.ejs
+++ b/views/template.ejs
@@ -4,7 +4,7 @@
 	<title><%= title %></title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="<?= htmlspecialchars($description); ?>" />
+	<meta name="description" content="<%= description %>" />
 	<meta name="google-site-verification" content="scP3iQq0RJSIb9oi5kqpf3JUyZrc8SMFVMPCo6dOJiM" />
 
     <link rel="shortcut icon" href="/images/tabc_logo.png" type="image/x-icon">
