Changed all links to relative

--- a/views/401.html
+++ b/views/401.html
@@ -5,5 +5,5 @@
 
     <img src="./images/401.png" alt="Error: 401 Forbidden" id="errorPic" class="center-block"/>
 
-    <h3> <a href="/login.php"> Log In </a> </h3>
+    <h3> <a href="../login.php"> Log In </a> </h3>
 </div>
