--- a/views/authForm.html
+++ b/views/authForm.html
@@ -3,7 +3,7 @@
 
 <div class="container">
 
-<form method="post" action="/api/userStatus">
+<form method="post" action="../api/userStatus">
 
     <label>Password
         <input autofocus type="password" name="password" />
