--- a/views/forgotPasswd.html
+++ b/views/forgotPasswd.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-<form method="post" action="/api/user">
+<form method="post" action="../api/user">
 
     <label>Username:
         <input type="text" name="user" required />
