--- a/views/issueTable.html
+++ b/views/issueTable.html
@@ -1,11 +1,11 @@
-<script defer src="/scripts/issue.js"></script>
+<script defer src="../scripts/issue.js"></script>
 
 <div class="container tableContainer">
 
     <h1 class="contriH1">Issues</h1>
-    
+
     <form method="post" action="">
-    
+
         <table>
             <thead>
                 <tr>
