--- a/views/journalistTable.html
+++ b/views/journalistTable.html
@@ -1,8 +1,8 @@
-<script defer src="/scripts/u.js"></script>
+<script defer src="../scripts/u.js"></script>
 
 <div class='container tableContainer'>
 
-<form id="journalistTable" method="post" action="/api/userGroup">
+<form id="journalistTable" method="post" action="../api/userGroup">
     <h1 class='contriH1'>Journalists</h1>
 
     <label for="sortBy">Sort By:
