--- a/views/mainPage.html
+++ b/views/mainPage.html
@@ -1,8 +1,8 @@
-<link type="text/css" rel="stylesheet" href="/styles/mainPage.min.css" />
-<script defer src="/scripts/mainPage.js"></script>
+<link type="text/css" rel="stylesheet" href="../styles/mainPage.min.css" />
+<script defer src="../scripts/mainPage.js"></script>
 
 <header>
-    <h1><img src="/images/tabc_logo.png" alt="TABC Logo" /> Eye Of The Storm </h1>
+    <h1><img src="../images/tabc_logo.png" alt="TABC Logo" /> Eye Of The Storm </h1>
 
     <q>A Clearer View Of TABC</q>
 
@@ -17,7 +17,7 @@
 
     <div id="slideShow">
         <a id="slideLink" href="">
-            <img id="placeholderPic" src="/images/tabc_logo.png" alt="Pictures in articles - slideshow" />
+            <img id="placeholderPic" src="../images/tabc_logo.png" alt="Pictures in articles - slideshow" />
         </a>
     </div>
 
