--- a/views/signupForm.html
+++ b/views/signupForm.html
@@ -1,9 +1,9 @@
-<script defer src="/scripts/signup.js"></script>
+<script defer src="../scripts/signup.js"></script>
 
 <div class="container">
 <h1> Sign Up </h1>
 
-<form id="signupForm" action="/api/user" method="post" >
+<form id="signupForm" action="../api/user" method="post" >
 
     <label> Username:
         <input class="username" id="username" autofocus name="username" type="text" pattern="[\w._-]+" title="Must be letters, numbers, ., _, or -" placeholder="jpulitzer" required />
