--- a/views/stormLogin.html
+++ b/views/stormLogin.html
@@ -3,7 +3,7 @@
 
 <h3> Log In </h3>
 
-<form id="loginForm" action="/api/userStatus" method="post" >
+<form id="loginForm" action="../api/userStatus" method="post" >
 
     <label> Username:
         <input autofocus name="username" id="username" type="text" placeholder="Username" required/>
