--- a/views/story.html
+++ b/views/story.html
@@ -1,7 +1,7 @@
 
-<link type="text/css" rel="stylesheet" href="/styles/stormStory.min.css?1.1" />
-<script defer src="/scripts/execCommands.min.js"></script>
-<script defer src="/scripts/story.js"></script>
+<link type="text/css" rel="stylesheet" href="../../../styles/stormStory.min.css?1.1" />
+<script defer src="../../../scripts/execCommands.min.js"></script>
+<script defer src="../../../scripts/story.js"></script>
 
 
 <div id="tags">Tag(s): </div>
