--- a/views/missionView.html
+++ b/views/missionView.html
@@ -1,5 +1,5 @@
-<link type='text/css' rel='stylesheet' href='/styles/stormStory.min.css?1.1' /><script defer src='/scripts/execCommands.min.js'></script>
-<script defer src='/scripts/mission.js'></script>
+<link type='text/css' rel='stylesheet' href='../styles/stormStory.min.css?1.1' /><script defer src='../scripts/execCommands.min.js'></script>
+<script defer src='../scripts/mission.js'></script>
 <div class='container'>
 <h1>Mission</h1>
 <div id='missionEdit'>
