--- a/client/src/stormStyles.css
+++ b/client/src/stormStyles.css
@@ -14,6 +14,10 @@ body {
     font-size: 12pt;
 }
 
+h1 {
+    margin-bottom: 80px;
+}
+
 @keyframes fadeOut {
 
     0% {
@@ -218,11 +222,11 @@ label {
   margin-top: 5px;
 }
 
-label[for=sortBy] {
+#sortingContainer label {
     text-align: center;
-    margin-bottom: 1em;
+    position: relative;
+    bottom: 15px;
 }
-
 
 meter {
     width: 148px;
@@ -245,10 +249,6 @@ h1, h2, h3 {
 
     text-shadow: 1px 1px 1px #000000;
     margin-top: 8rem;
-}
-
-form:not(#menuOut) {
-    margin-top: 80px;
 }
 
 label {
