Made all inputs, not just text, same size except number and submit

--- a/client/src/stormStyles.css
+++ b/client/src/stormStyles.css
@@ -263,7 +263,7 @@ input:not([type=submit]) {
     height: 16px;
 }
 
-input[type=text] {
+input:not([type=number]):not([type=submit]) {
 
     width: 144px;
 }
