Fixed css which didn't let tinymce go fullscreen

--- a/client/src/stormStyles.css
+++ b/client/src/stormStyles.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 .mce-edit-area {
-    width: 80vw !important; /* tinymce editor */
+    min-width: 80vw !important; /* tinymce editor */
 }
 
 @keyframes fadeOut {
