--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,48 @@
+*:not(button) {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    overflow-x: hidden;
+    background-color: #fdf7ef;
+    padding-bottom: 150px;
+    font-family: "Source Sans Pro",arial,sans-serif;
+    font-size: 12pt;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+h1, h2, h3 {
+
+    text-shadow: 1px 1px 1px #000000;
+    margin-top: 8rem;
+}
+
+.danger {
+    color: red;
+}
+
+.warning {
+    color: gold;
+}
+
+.success {
+    color: green;
+    background-color: lightgreen;
+}
+
+.small {
+    font-size: 10pt;
 }
