Added comment deletion functionality to actual Comment component (as opposed to an enclosing component

--- a/client/src/Pages/Story/index.css
+++ b/client/src/Pages/Story/index.css
@@ -57,10 +57,8 @@ h4+img {
     margin: 0
 }
 
-.break {
+hr {
     margin-top: 5em;
-    width: 100vw;
-    background-color: grey;
     height: 1px
 }
 
