Fixed: inputs had red outlines when page loaded

--- a/client/src/components/Form/Input/index.css
+++ b/client/src/components/Form/Input/index.css
@@ -2,3 +2,7 @@ input:not([type=number]):not([type=submit]):not([type=checkbox]) {
     height: 16px;
     width: 144px;
 }
+
+input:not(.touched) {
+    box-shadow: none;
+}
