--- a/client/src/components/CommentList/Comment/index.css
+++ b/client/src/components/CommentList/Comment/index.css
@@ -5,7 +5,7 @@
 
 .comment {
     padding: 2rem;
-    height: 8rem;
+    min-height: 8rem;
     background-color: #fff!important;
     border: 3px solid #000
 }
